# chessprompter

./: .gitignore  =1.7.0  CLAUDE.md  README.md  pyproject.toml  sample.pgn  schema-diagram.md
chessprompter_dbt/: TUTORIAL.md  dbt_project.yml  profiles.yml
chessprompter_dbt/models/marts/: opening_stats.sql  player_stats.sql  schema.yml
chessprompter_dbt/models/staging/: schema.yml  sources.yml  stg_games.sql
src/chessprompter/: __init__.py  cli.py  database.py  pgn_parser.py  player.py  schema.py
