[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chessprompter"
version = "0.1.1"
description = "A minimalistic CLI tool for training chess with a physical board"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "chess>=1.10.0",
    "duckdb>=0.9.0",
    "click>=8.0.0",
    "dbt-duckdb>=1.7.0",
]

[project.scripts]
chessprompter = "chessprompter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
